--- a/abc/index.html
+++ b/abc/index.html
@@ -21,7 +21,9 @@
     </ul>
 
     <!-- 标准的按钮 -->
-    <button type="button" class="btn btn-default">默认按钮</button>
+    <input type="button" class="btn btn-primary" value="绑定方法" v-on:click="abc">
+    <br />
+    <button type="button" class="btn btn-default" >默认按钮</button>
     <!-- 提供额外的视觉效果，标识一组按钮中的原始动作 -->
     <button type="button" class="btn btn-primary">原始按钮</button>
     <!-- 表示一个成功的或积极的动作 -->
@@ -39,7 +41,11 @@
 <div id="app2">
     <h2>{{title}}</h2>
     {{school.name}}:{{school.mobile}}
-    <ul><li v-for="c in campus">{{c}}</li></ul>
+    <ul><li v-for="campus in campuses">{{campus}}</li></ul>
+    <p v-text="content">
+    </p>
+    <p v-html="html_content">
+    </p>
 </div>
 
 
@@ -66,6 +72,12 @@
                 },
 
             ]
+        },
+        methods: {
+            abc:function() {
+                // alert("kkk");
+                console.log("abc");
+            }
         }
     })
     var app2=new Vue({
@@ -76,7 +88,9 @@
                 name: "黑马程序员",
                 mobile: "400-618-9090",
             },
-            campus:["北京校区", "上海校区", "广州校区", "深圳校区"]
+            campuses: ["北京校区", "上海校区", "广州校区", "深圳校区"],
+            html_content: "<h2>html在js内部</h2>",
+            content:"简单文本",
         }
     })
 </script>
